--- a/src/components/UI/Image.module.css
+++ b/src/components/UI/Image.module.css
@@ -12,6 +12,7 @@ div.desc {
   padding: 3px 6px;
   float: left;
   width: 24.99999%;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 700px) {
