--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -32,17 +32,10 @@
     font-weight: 100;
 }
 
-.close:hover,
-.close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
-}
-
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px){
     .modalImage {
-        width: 100%;
+        max-width: 100%;
     }
 
     .close {
